@@ -89,6 +89,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #20197: Added support for the WebP image type in the imghdr module.
+  Patch by Fabrice Aneche and Claudiu Popa.
+
 - Issue #21513: Speedup some properties of IP addresses (IPv4Address,
   IPv6Address) such as .is_private or .is_multicast.
 
